syntax = "proto3";
package calc;

option go_package = "gRPC-Service/proto";

service Calc {
  // Unary RPC method
  rpc Add (AddRequest) returns (AddResponse) {};
  // Server Streaming RPC method
  rpc Fibo(FiboRequest) returns (stream FiboResponse) {};
  // Client Streaming RPC method
  rpc ComputeAverage (stream ComputeAverageRequest) returns (ComputeAverageResponse){};
  // Bidirectional Streaming RPC method
  rpc FindMaximum (stream FindMaximumRequest) returns (stream FindMaximumResponse){};
}

message AddRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}
message AddResponse {
  int32 sum_result = 1;
}
message FiboRequest {
  int64 num = 1;
}
message FiboResponse {
  int64 num = 1;
}
message ComputeAverageResponse {
  double average = 1;
}
message ComputeAverageRequest {
  int32 number = 1;
}
message FindMaximumRequest {
  int32 number = 1;
}
message FindMaximumResponse {
  int32 maximum = 1;
}
